--- a/app/views/googlemap.html
+++ b/app/views/googlemap.html
@@ -92,7 +92,7 @@
                 </div>
             </strong>
 
-            <div class="col-md-12" ng-repeat="college in collegesOnRoute | orderBy:'distance'" >
+            <div class="col-md-12" ng-repeat="college in colleges | orderBy:'distance'" >
                 <div class="col-md-1">
                         <button ng-click="addStop(college)" type="submit" class="btn btn-default btn-xs ">Add To Trip</button>
                 </div>
