--- a/app/views/criteria.html
+++ b/app/views/criteria.html
@@ -312,6 +312,40 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div data-ng-class="{ 'panel-heading': 1, 'enabled': myForm.states.enabled }">
+                        <div class="panel-title pull-left">
+                            <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseStates">
+                                States
+                            </a>
+                        </div>
+                        <div class="panel-title pull-right" ng-show="myForm.states.enabled">Active</div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div id="collapseStates" class="panel-collapse collapse">
+                        <div class="panel-body">
+
+                            <div class="col-md-7">School must exist in these states:</div>
+                            <div class="col-md-5">
+                                Select as many options as you'd like <br>(Ctrl click to select multiple).
+                                <select size="10" class="form-control"
+                                        multiple="true"
+                                        data-ng-model="myForm.states.options"
+                                        data-ng-options="s.name for s in states track by s.id">
+                                </select>
+                            </div>
+                            <button class="btn btn-primary btn-md" data-ng-click="saveIt(myForm.states, 'states')">Save/Activate</button>
+                            <button class="btn btn-primary btn-md" data-ng-click="resetIt(myForm.states, 'states')">Remove</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
         </div>
     </form>
 
