--- a/app/views/plantrip.html
+++ b/app/views/plantrip.html
@@ -5,6 +5,38 @@
 
     <div class="col-lg-6 col-md-6 col-xs-12 col-lg-offset-3 col-md-offset-3 ">
         <div class="panel panel-default">
+            <div class="panel-heading">My Trips</div>
+            <div class="panel-body">
+                <!-- Table -->
+                <table st-table="trips" st-safe-src="tripsList" class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th st-sort="name">Trip Name</th>
+                        <th st-sort="junk"></th>
+                        <th st-sort="junk1"></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="trip in tripsList">
+                        <td>
+                            {{trip.name}}
+                        </td>
+                        <td><button class="btn btn-primary" data-ng-click="addGroup(newGroup)">Get Trip Info</button></td>
+                        <td><span class="glyphicon glyphicon-trash" ng-click="trashIt(college)">
+                                </span>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+<div class="col-lg-6 col-md-6 col-xs-12 col-lg-offset-3 col-md-offset-3 ">
+        <div class="panel panel-default">
             <div class="panel-heading"><h3>Chose Existing Trip</h3></div>
             <div class="panel-body">
                 <div class="col-md-10 col-md-offset-1">
