--- a/app/views/plantrip.html
+++ b/app/views/plantrip.html
@@ -23,7 +23,7 @@
                         <td>
                             {{trip.name}}
                         </td>
-                        <td><button class="btn btn-primary" data-ng-click="addGroup(newGroup)">Get Trip Info</button></td>
+                        <td><button class="btn btn-xs btn-primary" data-ng-click="addGroup(newGroup)">Get Trip Info</button></td>
                         <td><span class="glyphicon glyphicon-trash" ng-click="trashIt(college)">
                                 </span>
                         </td>
