--- a/app/views/criteria.html
+++ b/app/views/criteria.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
     <br>
     <form role="form">
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-md-6">
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div data-ng-class="{ 'panel-heading': 1, 'enabled': myForm.yrsOfSchool.enabled }">
@@ -390,7 +390,7 @@
         </div>
     </form>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6">
                 <h1>Schools Meeting Criteria:</h1>
                 <!--<div id="odometer" class="odometer">{{collegeCount.count}}</div>-->
                 <!--<div class="odometer" odometer="visitors" odometer-options="{theme: 'digital', duration: 3000}">{{collegeCount.count}}</div>-->
