getTripDetails, major refactor #2

--- a/app/views/plantrip.html
+++ b/app/views/plantrip.html
@@ -117,6 +117,9 @@
                                         <td>
                                             {{college.name}}
                                         </td>
+                                        <td>
+                                            {{college.distance}}
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
