--- a/app/views/plantrip.html
+++ b/app/views/plantrip.html
@@ -78,11 +78,20 @@
 
 
 
+    <div id="progressPLW" class="col-xs-6 col-xs-offset-3" ng-show="progressBarShow">
+        <div class="progress" style="position: relative;">
+            Calculating The Route....
+            <div class="progress-bar progress-bar-striped indeterminate">
+            </div>
+        </div>
+    </div>
+
 
     <!-- TRIP INFO -->
     <!-- TRIP INFO -->
     <!-- TRIP INFO -->
     <div class="col-lg-12 col-md-12 col-xs-12" ng-show="tripPlanningShow">
+
     <!--<div class="col-lg-12 col-md-12 col-xs-12" ng-if="tripPlanningShow">-->
         <div class="panel panel-default">
             <div class="panel-heading">Trip Planning</div>
