--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -110,3 +110,14 @@ div.panel-heading.enabled > div.panel-title.pull-right{
 .odometer {
     font-size: 100px;
 }
+
+/* used for progress*/
+.progress-bar.indeterminate {
+    position: relative;
+    animation: progress-indeterminate 3s linear infinite;
+}
+
+@keyframes progress-indeterminate {
+    from { left: -25%; width: 25%; }
+    to { left: 100%; width: 25%;}
+}
